--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -2,5 +2,12 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;            
-    padding: 10px 20px;
+    padding: 0 20px;
+    background-color: #ed3232;
+    height: 50px;
+    width: 98%;
+}
+
+.nav-container {
+    display: flex;
 }
