--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -9,7 +9,7 @@ nav {
   padding: 15px 40px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   position: sticky;
-  top: 0;
+  top: 23px;
   z-index: 100;
 }
 
