--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,24 @@
-/* App.css */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bebas+Neue&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 /* Global Styles */
 body {
   margin: 0;
   font-family: "Segoe UI", Roboto, sans-serif;
-  background-color: #48886b;
+  /* background-color: #48886b; */
   color: #ffffff;
   scroll-behavior: smooth;
   background-image:url(./assets/file_00000000798061f8ac4ebce7a3e700e2.png);
   background-size: cover; 
   background-position:left;     
   /* margin-top:20%; */
-  background-position-x:300px;
+  /* background-position-x:px; */
   background-blend-mode:normal;  
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  /* background-image: url(./assets/Adobe\ Express\ -\ file\ \(1\).png); */
 }
 
 
@@ -28,7 +34,7 @@ a {
 
 /* Navbar */
 .navbar {
-  background-color: #161b22;
+  /* background-color: #161b22; */
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -41,7 +47,7 @@ a {
 .navbar-logo {
   font-size: 1.8rem;
   font-weight: bold;
-  color: #58a6ff;
+  /* color: #58a6ff; */
 }
 
 .navbar-links a {
@@ -55,6 +61,8 @@ a {
 }
 
 /* Hero Section */
+
+
 .hero {
   height: 100vh;
   display: flex;
@@ -63,10 +71,21 @@ a {
   align-items: center;
   text-align: center;
 }
+.main-name {
+  font-size: 3rem;
+  /* font-weight: bold; */
+  color: transparent;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  font-family: "Prompt", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+-webkit-text-stroke:1px rgb(213, 145, 18);
+}
 
 .hero h1 {
   font-size: 3rem;
   font-weight: bold;
+ 
 }
 
 .hero p {
