--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,27 +1,13 @@
-
-
-@import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bebas+Neue&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bebas+Neue&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* Global Styles */
-body {
+/* body {
   margin: 0;
   font-family: "Segoe UI", Roboto, sans-serif;
   /* background-color: #48886b; */
-  color: #ffffff;
-  scroll-behavior: smooth;
-  background-image:url("../assets/file_00000000798061f8ac4ebce7a3e700e2.png");
-  background-size: cover; 
-  background-position:left;     
-  /* margin-top:20%; */
-  /* background-position-x:px; */
-  background-blend-mode:normal;  
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* color: #ffffff; */
   /* background-image: url(./assets/Adobe\ Express\ -\ file\ \(1\).png); */
-}
-
-
+/* } */ */
 
 a {
   text-decoration: none;
@@ -62,7 +48,6 @@ a {
 
 /* Hero Section */
 
-
 .hero {
   height: 100vh;
   display: flex;
@@ -79,13 +64,12 @@ a {
   font-family: "Prompt", sans-serif;
   font-weight: 900;
   font-style: normal;
--webkit-text-stroke:1px rgb(213, 145, 18);
+  -webkit-text-stroke: 1px rgb(213, 145, 18);
 }
 
 .hero h1 {
   font-size: 3rem;
   font-weight: bold;
- 
 }
 
 .hero p {
@@ -137,9 +121,9 @@ section h2 {
 }
 
 /* About / Projects / Contact Padding */
-section {
+/* section {
   padding: 4rem 2rem;
-}
+} */
 
 /* Responsive Layout */
 @media (max-width: 768px) {
