--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -2,7 +2,7 @@
 
   margin: 0;
   font-family: "Segoe UI", Roboto, sans-serif;
-  background-color: #48886b;
+  /* background-color: #48886b; */
   color: #ffffff;
   scroll-behavior: smooth;
 
