--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -17,12 +17,18 @@
 }
 .main-name {
 
-    font-size: 3rem;
+    font-size: 4rem;
+   
+    color: transparent;
     font-weight: bold;
-    color: #fefefe; /* Light text */
+
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        display: flex
-;
+        display: flex;
     position: relative;
-    top: 316px;
+    top: 250px;
+    font-weight: 900;
+  font-style: normal;
+  -webkit-text-stroke: 1px rgb(213, 145, 18);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  font-family: "Prompt", sans-serif;
 }
