--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -83,6 +83,10 @@ h1{
     font-family: "Prompt", sans-serif;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Optional for glow */
 } 
+.download-btn:hover {
+    background-color: rgba(255, 255, 255, 0.1); /* Optional hover effect */
+    color: rgb(78, 147, 10); /* Change text color on hover */
+}
 .contact-btn {
     position: absolute;
     top: 240px;
